--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "next",
     "start": "next start",
-    "build": "next build"
+    "build": "next build",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@100mslive/react-icons": "^0.10.9",
@@ -18,6 +19,9 @@
     "@agility/content-fetch": "1.1.1",
     "@agility/content-sync": "1.0.3",
     "@hcaptcha/react-hcaptcha": "^0.3.7",
+    "@prismicio/client": "^7.12.0",
+    "@prismicio/next": "^1.7.1",
+    "@prismicio/react": "^2.9.1",
     "@radix-ui/react-dialog": "0.1.5",
     "@radix-ui/react-dropdown-menu": "0.1.4",
     "@radix-ui/react-tabs": "0.1.4",
@@ -50,6 +54,7 @@
     "vanilla-tilt": "1.8.1"
   },
   "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.57",
     "@types/classnames": "2.3.1",
     "@types/cookie": "0.6.0",
     "@types/htmlescape": "1.1.3",
@@ -68,6 +73,7 @@
     "postcss-hover-media-feature": "1.0.2",
     "postcss-preset-env": "9.5.9",
     "prettier": "3.2.5",
+    "slice-machine-ui": "^2.10.3",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
   }
